[gd_scene load_steps=4 format=2]

[ext_resource path="res://graph/Graph.gd" type="Script" id=1]
[ext_resource path="res://graph/Camera.gd" type="Script" id=2]
[ext_resource path="res://graph/GraphSettings.gd" type="Script" id=3]

[node name="Graph" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
script = ExtResource( 2 )

[node name="Tables" type="Node2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="GraphSettings" type="VBoxContainer" parent="UI"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="ConnectionForces" type="CheckButton" parent="UI/GraphSettings"]
margin_right = 198.0
margin_bottom = 40.0
pressed = true
text = "Connection Forces"

[node name="LockRotation" type="CheckButton" parent="UI/GraphSettings"]
margin_top = 44.0
margin_right = 198.0
margin_bottom = 84.0
pressed = true
text = "Lock Rotation"

[node name="Label" type="Label" parent="UI/GraphSettings"]
margin_top = 88.0
margin_right = 198.0
margin_bottom = 102.0
text = "Distance"
align = 1

[node name="DistanceMultiplier" type="HSlider" parent="UI/GraphSettings"]
margin_top = 106.0
margin_right = 198.0
margin_bottom = 122.0
max_value = 5.0
step = 0.1
value = 1.0

[connection signal="pressed" from="UI/GraphSettings/ConnectionForces" to="UI/GraphSettings" method="_on_ConnectionForces_pressed"]
[connection signal="pressed" from="UI/GraphSettings/LockRotation" to="UI/GraphSettings" method="_on_LockRotation_pressed"]
[connection signal="value_changed" from="UI/GraphSettings/DistanceMultiplier" to="UI/GraphSettings" method="_on_DistanceMultiplier_value_changed"]
